<resources>
    <string name="app_name">HUNT</string>
    <string name="next">Next</string>
    <string name="wanna_go_hunting">Wanna go Hunting?</string>
    <string name="be_part_of_hunt">Be a part of the Hunt and find the minded people to Hunt with</string>
    <string name="btn_view_ticket">View Tickets</string>
    <string name="wanna_go_hunting1">Wanna go Hunting New Text?</string>
    <string name="be_part_of_hunt1">A new adventure is just swipe away</string>
    <string name="wanna_go_hunting2">Wanna go Hunting? Second Text</string>
    <string name="be_part_of_hunt2">Let the Hunt begin.</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="enter_number_recevie_otp">Enter your cellphone number to receive the one time verification</string>
    <string name="verification">Verification</string>
    <string name="didnt_recive_otp">Didn\'t receive the code? Please wait…</string>
    <string name="resent_otp">Resend OTP</string>
    <string name="we_will_send_other_otp">We will send you another six digit OTP on\n
        <font fgcolor='#E3004C'>%1$s!</font>
    </string>
    <string name="we_will_send_otp">We will send you four digit\nOTP on
        <font fgcolor='#E3004C'>%1$s!</font>
    </string>
    <string name="can_t_find_the_answer_contact_us">Can\'t find the answer?
        <font fgcolor='#fff64c1f'>Contact us</font>
    </string>
    <string name="send_again">Resend code</string>
    <string name="connect_with_fb">Connect with Facebook</string>
    <string name="connect_with_insta">Connect with Instagram</string>
    <string name="connect_with_google">Connect with Google</string>
    <string name="we_will_never_post">We will never post on your account. Pinky swear!</string>
    <string name="type_your_msg">Type your message here…</string>
    <string name="setup_profile">Setup Profile</string>
    <string name="full_name">Full name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="we_will_never_show_last_name">We will never show your last name to other users.</string>
    <string name="dob">Date of birth</string>
    <string name="dobFormat">MM/DD/YYYY</string>
    <string name="years_old">%1$s Years Old</string>
    <string name="want_some_gifts">Do you want to get some birthday presents?</string>
    <string name="upload_photo">Upload profile photo</string>
    <string name="add_photo">Add photo</string>
    <string name="hi_there">Hi There!</string>
    <string name="select_gender">Select Your Gender</string>
    <string name="relationship_status">Selec your Relationship Status</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="both">Both</string>
    <string name="continuee">Continue</string>
    <string name="resend_code">Resend code</string>
    <string name="skip">Skip</string>
    <string name="i_am_looking_for">I am looking for</string>
    <string name="select_your_choice">Select Your Choice</string>
    <string name="dates">Dates</string>
    <string name="buisness">Business</string>
    <string name="friendship">Friendship</string>
    <string name="i_am_interested_im">I\'m Interested in</string>
    <string name="done">Done</string>
    <string name="do_you_want_to_add_extra_choice">Do you want to add\nextra choice?</string>
    <string name="select_dates_buis_friends">You can select Dates, Business \n and friendship</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="John_don">John Don</string>
    <string name="email_email">abc@xyz.com</string>
    <string name="thank_you">Thank You!</string>
    <string name="you_have_completed">You\'ve completed your profile.\nYou are all set!</string>
    <string name="lets_start">Let\'s start!</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="added_photo">Added a profile photo</string>
    <string name="change_pic">Change picture</string>
    <string name="info_you_provide">Info You Provide</string>
    <string name="name_and_profile_pic">Name and profile picture</string>
    <string name="required">Required</string>
    <string name="friend_list">Friend List</string>
    <string name="friend_list_description">The names of your friends who also use and have shared their friends lists
        with HUNT
    </string>
    <string name="birthday">Birthday</string>
    <string name="birthday_description">Your Birthday</string>
    <string name="home_town_description">Koln,DE</string>
    <string name="photos">Photos</string>
    <string name="photos_description">Your Photos</string>
    <string name="page_likes">Page Likes</string>
    <string name="page_likes_description">Your Likes</string>
    <string name="gender">Gender</string>
    <string name="gender_description">Your Gender</string>
    <string name="email_address">Email address</string>
    <string name="passwords">Password</string>
    <string name="email_address_description">sara@gmail.com</string>
    <string name="continue_as">Continue as %1$s</string>
    <string name="hunt_will_user">Hunt will use:</string>
    <string name="profile_details_used">Your Public Profile, Friends List, Relationship Status, Interests, Birthday,
        Work History, Education History, Photos, Likes and Email Address.
    </string>
    <string name="edit_this">Edit This</string>
    <string name="referral_code">Referral Code</string>
    <string name="check_code">Check Code</string>
    <string name="enter_referral">Enter Referral code and enjoy a full free subscription for one month</string>
    <string name="your_referral_code">Your referral code is\n not correct.</string>
    <string name="try_again">Try again</string>
    <string name="turn_on_gps">Turn on GPS</string>
    <string name="open_the_location">Open the location service to get \ngeographic information, to get\n your match.
    </string>
    <string name="complete_form">Complete Form!</string>
    <string name="you_have_complete_form">You must complete the form before moving</string>
    <string name="already_registered_email">Email is already registered</string>
    <string name="invalid_email_address">Invalid email address!</string>
    <string name="search_locations">Search Locations</string>
    <string name="filter">Filter</string>
    <string name="interested_in">Interested in</string>
    <string name="age_range">Age Range</string>
    <string name="fromYears_toYears">%1$s Years - %2$s Years</string>
    <string name="apply">Apply</string>
    <string name="near_by_locations">Nearby locations</string>
    <string name="far_away">Far away</string>
    <string name="view_my_profile_as_others">View my profile as others see it.</string>
    <string name="hometown">Hometown</string>
    <string name="schooloruniversity">School or University</string>
    <string name="iam">I am</string>
    <string name="basic_info">Basic Info</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">Save</string>
    <string name="write_about_you">Write about you</string>
    <string name="job_title">Job title</string>
    <string name="add_job_title">Add job title</string>
    <string name="company">Company</string>
    <string name="add_company_name">Add company name</string>
    <string name="add_home_town">Add hometown</string>
    <string name="add_school_or_university">Add School or University</string>
    <string name="relation_question">What\'s your relationship status?</string>
    <string name="relation_option_1">Single</string>
    <string name="relation_option_2">In a relationship</string>
    <string name="relation_option_3">Married</string>
    <string name="relation_option_4">divorced</string>
    <string name="relation_option_5">its complicated</string>
    <string name="height_question">Whats\'s your height?</string>
    <string name="height_placeholder">Enter your height</string>
    <string name="gym_question">Do you work out?</string>
    <string name="gym_option_1">Active</string>
    <string name="gym_option_2">Sometimes</string>
    <string name="gym_option_3">Almost never</string>
    <string name="edutcation_question">What\'s your education?</string>
    <string name="education_option_1">High school</string>
    <string name="education_option_2">Vocational school</string>
    <string name="education_option_3">College</string>
    <string name="education_option_4">Undergraduate degree</string>
    <string name="education_option_5">Grad school</string>
    <string name="education_option_6">Graduate degree</string>
    <string name="drink_question">Do your drink?</string>
    <string name="drink_option_1">Socially</string>
    <string name="drink_option_2">Never</string>
    <string name="drink_option_3">Frequently</string>
    <string name="smoke_question">Do you smoke?</string>
    <string name="smoke_option_1">Socially</string>
    <string name="smoke_option_2">Never</string>
    <string name="smoke_option_3">Frequently</string>
    <string name="pets_question">Do you have pets?</string>
    <string name="pet_option_1">Dog</string>
    <string name="pet_option_2">Cat</string>
    <string name="pet_option_3">None</string>
    <string name="pet_option_4">Don\'t want any</string>
    <string name="pet_option_5">Lots</string>
    <string name="pet_option_6">Other</string>
    <string name="looking_for_question">What do you want from your matches?</string>
    <string name="looking_for_option_1">Dating</string>
    <string name="looking_for_option_2">Business</string>
    <string name="looking_for_option_3">Friendship</string>
    <string name="looking_for_option_4">All</string>
    <string name="kids_question">Do you have plans on having children?</string>
    <string name="kids_option_1">Want someday</string>
    <string name="kids_option_2">Don\'t want</string>
    <string name="kids_option_3">Have &amp; want more</string>
    <string name="kids_option_4">have &amp; don\'t want more</string>
    <string name="zodiac_question">Choose your zodiac?</string>
    <string name="zodiac_option_1">Aquaris</string>
    <string name="zodiac_option_2">Pisces</string>
    <string name="zodiac_option_3">Aries</string>
    <string name="zodiac_option_4">Taurus</string>
    <string name="zodiac_option_5">Gemini</string>
    <string name="zodiac_option_6">Cancer</string>
    <string name="zodiac_option_7">Leo</string>
    <string name="zodiac_option_8">Virgo</string>
    <string name="zodiac_option_9">Libra</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="card_number">Card Number</string>
    <string name="expiration_date">Expires Date</string>
    <string name="cvv">CVV</string>
    <string name="card_holders_name">Card Holder\'s Name</string>
    <string name="example_card_numner">1234 5678 9101 1121</string>
    <string name="expiry_date_hint">mm/yy</string>
    <string name="save_card">Save card</string>
    <string name="login_paypal">Login paypal</string>
    <string name="debit_card_are_acccepted">Debit cards are accepted for some countries and\nsome categories</string>
    <string name="by_clicking_here">By clicking here login you agree with</string>
    <string name="tell_us_why_and_we_ll_see_what_we_can_do">Tell us why and we\'ll see what we can do!</string>
    <string name="unsure_which_package_i_should_use">Unsure which package i should use</string>
    <string name="i_want_to_test_the_app_some_more">I want to test the app some more</string>
    <string name="price">Price</string>
    <string name="i_don_t_want_to_subscribe_to_premium">I don\'t want to subscribe to Premium</string>
    <string name="not_enough_value_for_the_cost">Not enough value for the cost</string>
    <string name="other">Other</string>
    <string name="delete_account">Delete Account</string>
</resources>