<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".setupProfile.SetupProfileGenderActivity">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/setupProfile_gender_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/setup_profile"
            app:titleTextColor="@color/app_text_black"
            app:navigationIcon="@drawable/ic_arrow_back_black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
    </androidx.appcompat.widget.Toolbar>

    <TextView
            android:text="@string/hi_there"
            android:textColor="@color/app_text_black"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="22sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/setupProfile_gender_toolbar"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="24dp"/>
    <TextView
            android:text="@string/select_gender"
            android:fontFamily="@font/montserrat"
            android:textSize="13sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="@+id/textView2"/>

    <Button android:layout_width="match_parent"
            android:background="@drawable/rectangle_app_btn"
            android:layout_height="wrap_content"
            android:text="@string/continuee"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat_bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/setup_gender_continue_btn"
    />

    <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/setup_gender_continue_btn"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
            android:gravity="center_horizontal"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" android:layout_marginTop="16dp">

        <ImageView android:layout_width="100dp"
                   android:id="@+id/male_imageview"
                   android:layout_height="100dp"
                   android:background="@drawable/unselected_circular_btn"
                   android:padding="30dp"
        />
        <TextView
                android:text="@string/male"
                android:textSize="20sp"
                android:fontFamily="@font/montserrat_medium"
                android:textColor="@color/app_text_black"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <ImageView android:layout_width="100dp"
                   android:layout_height="100dp"
                   android:id="@+id/female_imageview"
                   android:background="@drawable/unselected_circular_btn"
                   android:layout_marginTop="16dp"
                   android:padding="30dp"
        />
        <TextView
                android:text="@string/female"
                android:textSize="20sp"
                android:fontFamily="@font/montserrat_medium"
                android:textColor="@color/app_text_black"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <ImageView android:layout_width="100dp"
                   android:layout_height="100dp"
                   android:id="@+id/others_imageview"
                   android:background="@drawable/unselected_circular_btn"
                   android:layout_marginTop="16dp"
                   android:padding="30dp"
        />
        <TextView
                android:text="@string/other"
                android:textSize="20sp"
                android:fontFamily="@font/montserrat_medium"
                android:textColor="@color/app_text_black"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>