<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:padding="16dp"
        android:background="@color/white"
        android:layout_height="match_parent">
    <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:focusableInTouchMode="true"
            android:layout_height="wrap_content">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_holders_name"
                android:fontFamily="@font/montserrat_medium"
                android:textSize="12sp"
                android:textColor="#BAC0CB"
                />
        <EditText
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="8dp"
                android:hint="@string/John_don"
                android:paddingStart="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingEnd="16dp"
                android:textColorHint="@color/app_light_text_color"
                android:fontFamily="@font/montserrat_semibold"
                android:textSize="14sp"
                android:background="@drawable/gray_edit_text_bg"
                />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_number"
                android:fontFamily="@font/montserrat_medium"
                android:textSize="12sp"
                android:textColor="#BAC0CB"
                android:layout_marginTop="16dp"

                />
        <EditText
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="8dp"
                android:hint="@string/example_card_numner"
                android:paddingStart="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingEnd="16dp"
                android:textColorHint="@color/app_light_text_color"
                android:fontFamily="@font/montserrat_semibold"
                android:textSize="14sp"
                android:background="@drawable/gray_edit_text_bg"
                />
    <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="2"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
        <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expiration_date"
                    android:textSize="12sp"
                    android:textColor="#BAC0CB"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:fontFamily="@font/montserrat_medium"
                    />

            <EditText
                    android:id="@+id/master_card_expiry_date_et"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/gray_edit_text_bg"
                    android:fontFamily="@font/montserrat_semibold"
                    android:hint="@string/expiry_date_hint"
                    android:inputType="phone"
                    android:maxLength="5"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingRight="16dp"
                    android:textColor="@color/app_text_black"
                    android:textColorHint="@color/app_light_text_color"
                    android:textSize="14sp" />
        </LinearLayout>
        <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cvv"
                    android:textSize="12sp"
                    android:textColor="#BAC0CB"
                    android:fontFamily="@font/montserrat_medium"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    />
            <EditText
                    android:id="@+id/master_card_cvv_et"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="8dp"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingRight="16dp"
                    android:inputType="numberPassword"
                    android:maxLength="3"
                    android:textSize="14sp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:textColor="@color/app_text_black"
                    android:textColorHint="@color/app_light_text_color"
                    android:hint="@string/cvv"
                    android:background="@drawable/gray_edit_text_bg"
                    android:layout_marginBottom="8dp"
                    />


        </LinearLayout>

    </LinearLayout>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/debit_card_are_acccepted"
                android:textAlignment="center"
                android:fontFamily="@font/montserrat_medium"
                android:textSize="12sp"
                android:textColor="#BAC0CB"
                android:layout_marginTop="30dp"
                />

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_all_cards_type_list_icons"
                android:layout_marginTop="20dp"/>

        <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="40dp"
                android:text="@string/save_card"
                android:textAllCaps="false"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat_semibold"
                android:textSize="16sp"
                android:background="@drawable/new_app_btn_bg"/>
    </LinearLayout>





</ScrollView>